--- a/IcarusWeb/Results_browser/templates/Results_browser/Result.html
+++ b/IcarusWeb/Results_browser/templates/Results_browser/Result.html
@@ -1,6 +1,6 @@
 <h3>Result</h3>
 <ul>
-  <li><a href="/samples/{{ Result.sample_input_id.id }}">Sample</a></li>
-  <li><a href="/algorithms/{{ Result.algorithm_id.id }}">Algorithm</a></li>
-  <li><a href="/classifications/{{ Result.classification_id.id }}">Classification</a></li>
+  <li><a href="/db/sample/{{ Result.sample_input_id.id }}">Sample</a></li>
+  <li><a href="/db/algorithm/{{ Result.algorithm_id.id }}">Algorithm</a></li>
+  <li><a href="/db/classification/{{ Result.classification_id.id }}">Classification</a></li>
 </ul>
