--- a/IcarusWeb/Results_browser/templates/Results_browser/Sample_input.html
+++ b/IcarusWeb/Results_browser/templates/Results_browser/Sample_input.html
@@ -1,6 +1,6 @@
 <h3>Sample input</h3>
 <ul>
   <li>Sample type: {{ sample_input.sample_type }}</li>
-  <li><a href="/db/sample_image_wing/{{ sample_input.sample_image_wing_id }}">Sample image wing</a></li>
+  <li><a href="/db/sample_image_wing/{{ sample_input.sample_image_wing.id }}">Sample image wing</a></li>
   <li><a href="/db/sample_sound_wingbeat/{{ sample_input.sample_sound_wingbeat_id }}">Sample sound wingbeat</a></li>
 </ul>
