Begun work on generalized views for tables and records.

--- a/IcarusWeb/Results_browser/templates/Results_browser/index.html
+++ b/IcarusWeb/Results_browser/templates/Results_browser/index.html
@@ -2,3 +2,40 @@
 
 Most tables in Icarus' database are somehow linked to other tables, and therefore you will be able to navigate from almost any record to almost any other record.
 
+<h3>List records:</h3>
+
+<ul>
+  <li><a href="/db/acl">ACL</a></li>
+  <li><a href="/db/algorithm">Algorithm</a></li>
+  <li><a href="/db/area_type"></a>Area type</li>
+  <li><a href="/db/classification">Classification</a></li>
+  <li><a href="/db/climate_information">Climate information</a></li>
+  <li><a href="/db/collect">Collect</a></li>
+  <li><a href="/db/collection_type">Collection type</a></li>
+  <li><a href="/db/donation">Donation</a></li>
+  <li><a href="/db/file">File</a></li>
+  <li><a href="/db/gene_bank_registry">Gene bank registry</a></li>
+  <li><a href="/db/image">Image</a></li>
+  <li><a href="/db/institution">Institution</a></li>
+  <li><a href="/db/landmarks">Landmarks</a></li>
+  <li><a href="/db/location">Location</a></li>
+  <li><a href="/db/manual_classification">Manual classification</a></li>
+  <li><a href="/db/mosquitolab">MosquitoLab</a></li>
+  <li><a href="/db/photophysiognomy">Photophysiognomy</a></li>
+  <li><a href="/db/political_location">Political location</a></li>
+  <li><a href="/db/procrustes">Procrustes</a></li>
+  <li><a href="/db/publication">Publication</a></li>
+  <li><a href="/db/result">Result</a></li>
+  <li><a href="/db/sample">Sample</a></li>
+  <li><a href="/db/sample_group">Sample group</a></li>
+  <li><a href="/db/sample_image_wing">Sample image wing</a></li>
+  <li><a href="/db/sample_input">Sample input</a></li>
+  <li><a href="/db/sample_sound_wingbeat">Sample sound wingbeat</a></li>
+  <li><a href="/db/sample_wing">Sample wing</a></li>
+  <li><a href="/db/sound">Sound</a></li>
+  <li><a href="/db/storage">Storage</a></li>
+  <li><a href="/db/user">User</a></li>
+  <li><a href="/db/user_type">User type</a></li>
+</ul>
+  
+  
